@@ -11,6 +11,8 @@ from jeff b (jeff@univrel.pr.uconn.edu)
 * if something doesn't work after you upgrade to a new tarball, please
   reinitialize the database to get the new parts up and running. (this
   will change as soon as the database is capable of holding live data)
+* code is annotated with an author if the primary author is other than
+  jeff b <jeff@univrel.pr.uconn.edu>
 
 **************************************************************** INSTALLATION
 
