@@ -6,6 +6,14 @@ freemed project changelog
     stem the run on list questions 
   - commited procedure.php3 with wizard code. due to recompiling PHP on my
     box without bcmath support by mistake, can't check it for problems.
+  - moved procedure.php3 -> procedure.php
+  - moved manage_bills.php3 -> manage_bills.php
+  - moved generate_fixed_forms.php3 -> generate_fixed_forms.php
+  - moved billing_functions.php3 -> billing_functions.php
+  - moved redirect.php3 -> redirect.php
+  - moved room.php3 -> room.php
+  - moving to CVS Id tag for new files ... also taking out code by: line
+    unless other than jeff
 
 * Wed Dec 6  2000 fforest
   - billing_functions : new menu item to generate patient invoices
